assets/style.css
/* reseteo css */
*{
  margin: 0;
  padding: 0;
}

/* estilos generales */
main{
  font-family: 'Poppins', sans-serif;
}

h1{
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 5rem;
}

h2{
  font-family: 'Poppins', sans-serif;
  font-style:normal;
  font-weight: 700;
  font-size: 4rem;
}

h3{
  font-family: 'Poppins', sans-serif;
  font-style:normal;
  font-weight: 600;
  font-size: 2.5rem;
}

p{
  font-family: 'Poppins', sans-serif;
  font-style:normal;
  font-weight: 400;
  font-size: 1.5rem;
}

a{
  font-family: 'Poppins', sans-serif;
  text-decoration: none;
  color: black;
}

/* header */
nav{
  background-color: #E5DDD3;
  position:fixed;
  width: 100vw;
  height: auto;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
}

nav ul{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  list-style: none;
}

nav ul li{
  padding: 30px;
  font-weight: 500;
}

nav ul li a{ 
  font-size: 1.5rem;
  color: black;
  padding: 5px 10px;
  transition: all 0.7s;
}

nav ul li a:hover{
  background-color: #D39788;
  border-bottom: solid 0.5px black;
}

nav img{
  padding: 20px
}

/* footer */
footer{ 
  background-color: #475418;
  width: 100vw;
  height: auto;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-around;
  padding: 20px 0;  
}

.footer__logo{
  align-self: center;
}

footer ul{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  list-style: none;
  margin-bottom: 20px;
}

footer ul li{
  padding: 20px;
}

footer ul li a{ 
  font-size: 1.3rem;
  color: white;
}

footer ul li a:hover{
  border-bottom: solid 0.5px white;
}

footer img{
  padding: 20px
}

.footer__copyrigth{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  border-top: solid 0.3px white;
  padding: 20px ;
}

.footer__copyrigth p{
  font-size: 1.3rem;
  font-weight: 300;
  font-style: italic;
  color:lightgrey;
}

.footer__copyrigth p span{
  font-weight: 600;
}

/* botones */
.boton{	
  display: inline-flex;
  padding: 0 30px;
  width: 200px; 
	height: 70px;
  background-color: #A4B26B;
  border-radius: 25px;
	align-items: center;
}

.boton:hover{
  background-color: #778C3A;
}

.boton--rosa{	
  display: inline-flex;
  padding: 0 30px;
  width: 200px; 
	height: 70px;
  background-color: #D39788;
  border-radius: 25px;
	align-items: center;
}

.boton--rosa:hover{
  background-color: #BC716D;
}

.boton__texto{
  font-family: 'Poppins', sans-serif;
  font-style:normal;
  font-weight: 500;
  font-size: 1.5rem;
  text-align: left;
  color: black;
}

/* -- INICIO -- */
/* carrousel */
.carrousel{
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  background-image: url(../img/carrousel1.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  width: 100vw;
  height: 1000px;
  color:white;
}

/* presentacion */
.presentacion{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content:space-around;
  align-items: center;
  margin: 150px 0;
}

.presentacion__foto img{
  border-radius: 500px;
}

.presentacion__info{
  display: flex;
  flex-direction: column;
  width: 50%;
}

.presentacion__info p{
  padding: 20px 0;
}

/* eventos */
.eventos{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 150px 0;
}

.eventos__titulo{
  margin: 30px 0;
}

.eventos__categorias {
  display: grid;
  grid-template-areas:
    "bodas quince quince"
    "bodas cumples rincones"
    "recep recep rincones"
    "recep recep casa";
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: repeat(4, 250px); 
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  width: 80vw;
}

.bodas{
  grid-area: bodas;
  background-image: linear-gradient(to right, #F5E0C0, #F0C6B6);
  border-radius: 25px;
  padding: 20px;
}

.cumples{
  grid-area: cumples;
  background-color: #F5E0C0;
  border-radius: 25px;
  padding: 20px;
}

.quince{
  grid-area: quince;
  background-color: #BFC695;
  border-radius: 25px;
  padding: 20px;
}

.rincones{
  grid-area: rincones;
  background-image: linear-gradient(to right, #F0C6B6, #CF8982);
  border-radius: 25px;
  padding: 20px;
}

.recep{
  grid-area: recep;
  background-image: linear-gradient(to right, #d4dab6, #A4B26B);
  border-radius: 25px;
  padding: 20px;
}

.casa{
  grid-area: casa;
  background-color: #F5E0C0;
  border-radius: 25px;
  padding: 20px;
}

/* testimonios */
.testimonios{
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #E5DDD3; 
  margin: 150px 0;
  padding: 50px 0;
}

.testimonios__titulo{
  margin: 30px 0;
}
  
.testimonios__cards{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
  width: 80vw;
}

.testimonios__card1, .testimonios__card2, .testimonios__card3{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.testimonios__info{ 
  background-color: white;
  border-radius: 20px;
  text-align: center;
  margin: 20px;
  padding: 20px;
}

.testimonios__foto{
  border-radius: 250px;
}

.testimonios p {
  text-align: center;
}

/* servicios */
.servicios{
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
  margin: 150px 0;
}

.servicios__titulo{
  margin: 30px 0;
}

.servicios__cards{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
}

.servicios__card1{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  border-radius: 30px;
  padding: 30px;
  margin: 0 20px;
  background-color: #D4D8B6;
}
/* ... */

